re PR c++/12369 (ICE with templates and friends)

PR c++/12369
	* g++.dg/template/friend25.C: New test.

	PR c++/7939
	* g++.dg/template/crash11.C: New test.

From-SVN: r72548