gcc/testsuite/g++.dg/template/friend25.C
@@ -1,0 +1,14 @@
+// { dg-do compile }
+
+// Origin: Jiangbin Zhao <zhaojiangbin@yahoo.com>
+
+// PR c++/12369: ICE for specialization of member function template
+// as friend in ordinary class.
+
+struct A {
+    template<class T> T* make() { return new T(); }
+};
+ 
+struct B {
+    friend B* A::make< B >(); // (1)
+};
